@@ -143,11 +143,8 @@ has _mysql => (
         #     push @ret => map {; "--$_", $vars{$_} } sort keys %vars;
         # }
 
-        my $is_maria = $self->sqitch->probe( $self->client, '--version' )
-            =~ /mariadb/i;
-
         push @ret => (
-            ($is_maria ? '--disable-pager' : '--skip-pager' ),
+            ($^O eq 'MSWin32' ? () : '--skip-pager' ),
             '--silent',
             '--skip-column-names',
             '--skip-line-numbers',
